src/test/ui/error-codes/E0164.stderr
error[E0164]: expected tuple struct/variant, found associated constant `<Foo>::B`
  --> $DIR/E0164.rs:9:9
   |
LL |         Foo::B(i) => i,
   |         ^^^^^^^^^ not a tuple variant or struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0164`.
